fix: remove exposed secret and ignore build artifacts